Changelog of Pythia:

Version 2.3.5
  - New Feature #34: using the shell command with sqlplus has been replaced by the oracle_sql
    module

Version 2.3.0
  - New Feature #25: You can now specify a list of instance parameters which will get set
    when a database is getting created. See docs/CREATE_DB.md
  - Fixed #26: Autostart scripts dbstart and dbshut will now get deployed with the correctl
    permission
  - New Feature #27: Pythia will now configure SELinux according to the parameter set by
    selinux_desired_state (default permissive)
  - Fixed #32: The shell script that is getting executed when su to the oracle OS user
    now shows the correct version in any case

Version 2.2.5
  - New Feature #19: Automatic linting is now done using Github Actions. Fixed many (really many)
    linting errors and refactored lots of code
  - New Feature #20: Added Molecule test scenarios in Pythia
  - New Feature #21: You can now specify additional runInstaller parameters by using the runinstaller_parameters variable
  - Fixed #23: Pythia now uses dynamic generated variable role_path when working with templates and files.

Version 2.2.0
  - New Feature #17: Pythia now supports Oracle Database 21c as well as Multitenant / Container Databases
    
    Especially the support for Multitenant Databases has brought some Changes.
    It's now necessary to provide the information if the Databases running on a
    specific RDBMS is a CDB or not. It's not a real good implementation to control
    this in the rdbms_dict.yml cause the fact if it is a CDB or not, is defined per
    database and not per RDBMS. But since 21c no longer supports any NON-CDB setups,
    we implemented it there. The fact if is a CDB or not is controlled by setting
    the variable container_database within rdbms_dict.yml.
    Second major adjustment can be found during the patching of a container database.
    You can control if you want to get all PDBs within a CDB started up after the