@@ -7,6 +7,7 @@
     oracle_sid: ORA21
     sga_max_size: 2
     emexpress: NONE
+    molecule_run: true
 
   roles:
     - pythia
